assets/css/tailwind.css
/**
 * This injects Tailwind's base styles and any base styles registered by
 * plugins.
 */
@tailwind base;

/**
 * This injects Tailwind's component classes and any component classes
 * registered by plugins.
 */
@tailwind components;

.dark-mode body {
  @apply bg-gray-800 text-white;
}

/*.dark-mode::selection {*/
/*    background-color: #00da84;*/
/*    color: white;*/
/*}*/

.dark-mode .nuxt-content h2 {
  @apply text-xl text-white;
}

.dark-mode .nuxt-content p, .dark-mode .nuxt-content li {
  @apply text-gray-200;
}

.nuxt-content blockquote {
  border-left-width: 0.15rem;
  border-left-color: #aff10f;
}

.nuxt-content blockquote p {
  @apply w-10/12;
}

.dark-mode .prose a {
  @apply text-white underline transition-colors duration-300;
}

.nuxt-content .nuxt-content-highlight .line-numbers {
  box-shadow: 0 5px 8px 0 #2a2a2a;
  border-radius: 5px;
}

.dark-mode .nuxt-content .nuxt-content-highlight .line-numbers {
    box-shadow: unset;
}

.dark-mode .nuxt-content code[class*="language-"]::selection, .dark-mode .nuxt-content pre[class*="language-"]::selection {
    background: #212121;
}

.nuxt-content pre[class*=language-] {
  background-color: #2a2a2a;
  position: static;
}

code {
  text-shadow: none;
}

.prose pre code {
  color: #cdcdcd;
}

.nuxt-content .token.operator, .token.entity, .token.url, .language-css .token.string, .style .token.string {
  color: #838383;
  background: unset;
}

.dark-mode .nuxt-content .token.operator, .token.entity, .token.url, .language-css .token.string, .style .token.string {
  color: #9c9c9c;
  background: unset;
}

.nuxt-content .nuxt-content-highlight .line-numbers .string {
  color: #29831d;
}

.dark-mode .prose a:hover {
  @apply text-green-600;
}

.dark-mode .prose a:visited {
  @apply text-indigo-500;
}

.dark-mode .prose {
  @apply text-gray-200;
}

.prose {
  @apply max-w-full;
}

.bg-color {
  background-color: #f1fafb;
}

.dark-mode .bg-color {
  background-color: #212121;
}

::-webkit-scrollbar {
  width: 7px;
}

::-webkit-scrollbar-thumb {
  border-radius: 10px;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
  background-color: #005bcb;
}

::-webkit-scrollbar-track {
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), inset 0 6px 20px 0 rgba(0, 0, 0, 0.19);
  border-radius: 10px;
}

:target {
  color: #005bcb !important;
}

@keyframes bounced {
  0%, 100% {
    transform: translateX(-25%);
    animation-timing-function: cubic-bezier(0.8, 0, 1, 1)
  }
  50% {
    transform: translateX(0);
    animation-timing-function: cubic-bezier(0, 0, 0.2, 1)
  }
}

pre[class*="language-"]::selection, pre[class*="language-"] ::selection, code[class*="language-"]::selection, code[class*="language-"] ::selection {
    text-shadow: none !important;
    background: #414141 !important;
}

img {
  border-radius: 5px !important;
    box-shadow: 0 5px 8px 0 #2a2a2a !important;
}

/**
 * This injects Tailwind's utility classes and any utility classes registered
 * by plugins.
 */
@tailwind utilities;


@layer utilities {
  @responsive {
    @variants group-hover, group-focus, hover, focus, active {
       .animate-bounce-r\:l {
        animation: bounced 1s infinite;
      }
    }
  }
}

